# journal-gui

./: .gitignore  README.md  build.sh  index.html  package-lock.json  package.json  summary.html  todos.html  vite.config.ts
src/: main.ts  summary.ts  todos.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  main.rs  tray.rs
src/components/: quick-note.ts  summary-view.ts
