[package]
name = "journal-gui"
version = "0.1.0"
description = "A quick journal entry GUI"
authors = ["Thierry"]
edition = "2021"
rust-version = "1.77.2"

[[bin]]
name = "journal-gui"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
